Fix a bug causing an empty mode message

It looks like the job of this if statement is to chop it off
after 3 destinations have been added, append that to the result,
and give the for loop a blank line to add more nicks to.The
problem seems to arise from the fact that 0%3 is 0, so the line
gets cut off at index 0 when no nicks have been added.
BUG:214258